--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,11 @@ vendor/*
 # Test binary, build with `go test -c`
 *.test
 .idlea/*
+.idea/workspace.xml
 
 .DS_Store
+./Editor_NaN
+Editor_NaN
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
